--- a/index.html
+++ b/index.html
@@ -10,5 +10,13 @@
     <a class="btn btn-outline-primary" href="https://www.gachon.ac.kr/kor/index.do" target="_blank" role="button">학교 홈페이지</a>  <!--임시. 부트스트랩 정상 실행 확인용! 새창으로 열림-->
     <script>
     </script>
+	<div class="card" style="width: 18rem;">
+		<img src="https://www.gachon.ac.kr/CrossEditor/binary/images/000031/2022051301032812050001_b.jpg" class="card-img-top" alt="...">
+		<div class="card-body">
+			<h5 class="card-title">Example</h5>
+			<p class="card-text">Test</p>
+			<a href="https://www.gachon.ac.kr/" class="btn btn-primary">가천대학교 홈페이지</a>
+		</div>
+	</div>
   </body>
 </html>
