--- a/index.html
+++ b/index.html
@@ -5,11 +5,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous"> 
     <title>noodle_html</title>
+    <link href="style.css" rel="stylesheet">
   </head>
   <body>
-    <a class="btn btn-outline-primary" href="https://www.gachon.ac.kr/kor/index.do" target="_blank" role="button">학교 홈페이지</a>  <!--임시. 부트스트랩 정상 실행 확인용! 새창으로 열림-->
-    <script>
-    </script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+
+    <header class="navbar navbar-expand navbar-dark bg-dark bd-navbar">
+      <a class="navbar-brand" href="#">라면라면</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active"><a class="nav-link" href="#">홈</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">농심 홈페이지</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">학교 홈페이지</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">github</a></li>
+        </ul>
+      </div>
+    </header>
+
+    <div class="container-fluid">
+      <div class="row flex-nowrap">
+        <div class="col-3 bd-sidebar">
+          <ul class="nav">
+            <li><a href="#">우육탕큰사발</a></li>
+            <li><a href="#">새우탕컵면</a></li> <!--큰-->
+            <li><a href="#">무파마큰사발</a></li>
+            <li><a href="">맛짬뽕큰사발</a></li>
+            <li><a href="">김치사발면</a></li> <!--큰-->
+            <li><a href="">짜왕큰사발</a></li>
+            <li><a href="">안성탕면컵</a></li>
+            <li><a href="">신라면컵</a></li> <!--큰-->
+            <li><a href="">튀김우동컵</a></li> <!--큰-->
+            <li><a href="">사리곰탕컵</a></li> <!--큰-->
+            <li><a href="">감자면큰사발</a></li>
+            <li><a href="">앵그리짜파구리큰사발</a></li>
+            <li><a href="">신라면블랙사발두부김치</a></li>
+            <li><a href="">신라면블랙사발</a></li>
+            <li><a href="">카구리큰사발면</a></li>
+            <li><a href="">특육개장큰사발면</a></li>
+            <li><a href="">보글보글부대찌개큰사발면</a></li>
+            <li><a href="">농심쌀국수</a></li>
+            <li><a href="">농심쌀국수소고기장국</a></li>
+            <li><a href="">오징어짬뽕컵</a></li> <!--큰-->
+            <li><a href="">짜파게티범벅</a></li>
+            <li><a href="">짜파게티큰사발</a></li> 
+            <li><a href="">사천짜파게티큰사발</a></li> 
+            <li><a href="">신라면볶음면큰사발</a></li>
+            <li><a href="">신볶게티큰사발면</a></li> 
+            <li><a href="">생생우동용기</a></li>
+            <li><a href="">육개장사발면</a></li> <!--큰-->
+            <li><a href="">너구리컵</a></li> <!--큰-->
+            <li><a href="">순한너구리컵</a></li>
+            <li><a href="">볶음너구리큰사발</a></li>
+            <li><a href="">신라면건면사발</a></li>
+          </ul>
+          <br>
+        </div>
+        <main class="col-9 py-md-3 pl-md-5 bd-content" role="main">
+          <h1>페이지</h1>
+        </main>
+      </div>
+    </div>
+
+
+
+    <!--
 	<div class="card" style="width: 18rem;">
 		<img src="https://www.gachon.ac.kr/CrossEditor/binary/images/000031/2022051301032812050001_b.jpg" class="card-img-top" alt="...">
 		<div class="card-body">
@@ -18,5 +81,6 @@
 			<a href="https://www.gachon.ac.kr/" class="btn btn-primary">가천대학교 홈페이지 </a>
 		</div>
 	</div>
+-->
   </body>
 </html>
