--- a/홈.html
+++ b/홈.html
@@ -14,9 +14,8 @@
     <div class="container">
       <div class="text-center">
         <h1 class="display-1 mt-5 mb-4">농심</h1>
-        <p>
-          보다 좋은 상품과 서비스를 제공하여 고객만족을 선도하며,
-          이로써 내 외부 고객의 풍요로운 삶에 공헌한다
+        <p class="fs-3">
+          한국인의 맛을 창조하여 지속성장하는 농심이 되겠습니다
         </p>
       </div>
     </div>
