--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 <!--해더 부분-->
 <header class="navbar navbar-expand navbar-dark bg-dark bd-navbar">
-	<a class="navbar-brand" href="#">라면라면</a>
+	<a class="navbar-brand" href="#" style="margin-left: 50px;">라면라면</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
@@ -29,11 +29,12 @@
 		<ul class="navbar-nav">
 			<li class="nav-item active"><a class="nav-link" href="#">홈</a></li>
 			<li class="nav-item"><a class="nav-link" href="#">농심 홈페이지</a></li>
-			<li class="nav-item"><a class="nav-link" href="#">학교 홈페이지</a></li>
-			<li class="nav-item"><a class="nav-link" href="#">github</a></li>
+			<li class="nav-item"><a class="nav-link" href="https://gachon.ac.kr/">학교 홈페이지</a></li>
+			<li class="nav-item"><a class="nav-link" href="https://github.com/JiahnChoi/Noodle_HTML">github</a></li>
 		</ul>
 	</div>
 </header>
+
 <!--이미지 파일 불러오기 / 이건 필요 없어져야함-->
 <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
 	<symbol id="bootstrap" viewBox="0 0 118 94">
@@ -94,109 +95,182 @@
 	</symbol>
 </svg>
 <!--메인화면-->
-<main class="d-flex flex-nowrap">
-	<!--사이드 바-->
-	<div class="flex-shrink-0 p-3 bg-white" style="width: 280px;">
-		<a href="/" class="d-flex align-items-center pb-3 mb-3 link-dark text-decoration-none border-bottom">
-			<svg class="bi pe-none me-2" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
-			<span class="fs-5 fw-semibold">농심관</span>
-		</a>
-		<ul class="list-unstyled ps-0">
-			<!--컵라면 정보 부분-->
-			<li class="mb-1">
-				<button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="true">
-					컵라면 정보 보기
-				</button>
-				<div class="collapse show" id="home-collapse">
-					<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(1)">우육탕큰사발</a></li>
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(2)">새우탕컵면</a></li> <!--큰-->
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(4)">무파마큰사발</a></li>
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(5)">맛짬뽕큰사발</a></li>
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(6)">김치사발면</a></li> <!--큰-->
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(8)">짜왕큰사발</a></li>
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(9)">안성탕면컵</a></li>
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(10)">신라면컵</a></li> <!--큰-->
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(13)">튀김우동컵</a></li> <!--큰-->
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(15)">사리곰탕컵</a></li> <!--큰-->
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(16)">감자면큰사발</a></li>
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(17)">앵그리짜파구리큰사발</a></li>
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(18)">신라면블랙사발두부김치</a></li>
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(19)">신라면블랙사발</a></li>
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(21)">카구리큰사발면</a></li>
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(21)">특육개장큰사발면</a></li>
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(22)">보글보글부대찌개큰사발면</a></li>
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(23)">농심쌀국수</a></li>
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(24)">농심쌀국수소고기장국</a></li>
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(25)">오징어짬뽕컵</a></li> <!--큰-->
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(27)">짜파게티범벅</a></li>
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(28)">짜파게티큰사발</a></li>
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(29)">사천짜파게티큰사발</a></li>
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(30)">신라면볶음면큰사발</a></li>
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(31)">신볶게티큰사발면</a></li>
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(32)">생생우동용기</a></li>
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(33)">육개장사발면</a></li> <!--큰-->
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(35)">너구리컵</a></li> <!--큰-->
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(37)">순한너구리컵</a></li>
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(38)">볶음너구리큰사발</a></li>
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(39)">신라면건면사발</a></li>
-					</ul>
-				</div>
-			</li>
-			<!--통계 부분-->
-			<li class="mb-1">
-				<button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#dashboard-collapse" aria-expanded="false">
-					통계 확인하기
-				</button>
-				<div class="collapse" id="dashboard-collapse">
-					<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="graphchanger(1)">칼로리</a></li>
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="graphchanger(2)">중량</a></li>
-						<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="graphchanger(3)">출시년도</a></li>
-					</ul>
-				</div>
-			</li>
-			<li class="border-top my-3"></li>
-		</ul>
-	</div>
-	<div class="b-example-divider b-example-vr"></div>
-	<!--메인화면 컵라면 정보카드-->
-	<div class="card mb-3" id="rinfocardvar" style="width: 300px; margin: 10px;">
-		<img id="rimgval" src="https://w.namu.la/s/51f656cb58ffc529724fc1f62dc055430f035f937344cda61f6abcfa0e5001e2bc0cd13ae4a192b30962943a5526da6554ae6445388ced9d468e24369ed4b1f7fc3b45cd022a11d11dfb56bdda193d6b03ad1a09d386eaa0375edf6f9a6566f9e5e60563ddec46219e85888ece97762e" class="card-img-top" alt="...">
+<!--사이드 바-->
+<div class="flex-shrink-0 p-3 bg-white" id="sidestyle">
+	<a href="/" class="d-flex align-items-center pb-3 mb-3 link-dark text-decoration-none border-bottom">
+		<svg class="bi pe-none me-2" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
+		<span class="fs-5 fw-semibold">농심관</span>
+	</a>
+	<ul class="list-unstyled ps-0">
+		<!--컵라면 정보 부분-->
+		<li class="mb-1">
+			<button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#ramen-collapse" aria-expanded="false">
+				컵라면 정보 보기
+			</button>
+			<div class="collapse" id="ramen-collapse">
+				<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(1)">우육탕큰사발</a></li>
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(2)">새우탕컵면</a></li> <!--큰-->
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(4)">무파마큰사발</a></li>
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(5)">맛짬뽕큰사발</a></li>
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(6)">김치사발면</a></li> <!--큰-->
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(8)">짜왕큰사발</a></li>
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(9)">안성탕면컵</a></li>
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(10)">신라면컵</a></li> <!--큰-->
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(13)">튀김우동컵</a></li> <!--큰-->
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(15)">사리곰탕컵</a></li> <!--큰-->
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(16)">감자면큰사발</a></li>
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(17)">앵그리짜파구리큰사발</a></li>
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(18)">신라면블랙사발두부김치</a></li>
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(19)">신라면블랙사발</a></li>
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(21)">카구리큰사발면</a></li>
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(21)">특육개장큰사발면</a></li>
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(22)">보글보글부대찌개큰사발면</a></li>
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(23)">농심쌀국수</a></li>
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(24)">농심쌀국수소고기장국</a></li>
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(25)">오징어짬뽕컵</a></li> <!--큰-->
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(27)">짜파게티범벅</a></li>
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(28)">짜파게티큰사발</a></li>
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(29)">사천짜파게티큰사발</a></li>
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(30)">신라면볶음면큰사발</a></li>
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(31)">신볶게티큰사발면</a></li>
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(32)">생생우동용기</a></li>
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(33)">육개장사발면</a></li> <!--큰-->
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(35)">너구리컵</a></li> <!--큰-->
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(37)">순한너구리컵</a></li>
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(38)">볶음너구리큰사발</a></li>
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="infochanger(39)">신라면건면사발</a></li>
+				</ul>
+			</div>
+		</li>
+		<!--통계 부분-->
+		<li class="mb-1">
+			<button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#dashboard-collapse" aria-expanded="false">
+				통계 확인하기
+			</button>
+			<div class="collapse" id="dashboard-collapse">
+				<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="graphchanger(1)">칼로리</a></li>
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="graphchanger(2)">중량</a></li>
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="graphchanger(3)">출시년도</a></li>
+				</ul>
+			</div>
+		</li>
+		<li class="border-top my-3"></li>
+		<li class="mb-1">
+			<button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed" data-bs-toggle="collapse" data-bs-target="#dashboard-id" aria-expanded="false">
+				Page Makers
+			</button>
+			<div class="collapse" id="dashboard-id">
+				<ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+					<li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded" onclick="personal()">개인정보</a></li>
+				</ul>
+			</div>
+		</li>
+	</ul>
+</div>
+<main style="overflow:visible">
+	<div class="card personalinfo">
+		<img src="https://w.namu.la/s/51f656cb58ffc529724fc1f62dc055430f035f937344cda61f6abcfa0e5001e2bc0cd13ae4a192b30962943a5526da6554ae6445388ced9d468e24369ed4b1f7fc3b45cd022a11d11dfb56bdda193d6b03ad1a09d386eaa0375edf6f9a6566f9e5e60563ddec46219e85888ece97762e" class="card-img-top" alt="...">
 		<div class="card-body">
-			<div id="rtitle"><span id="rtitleval">라면 이름</span></div><br><br>
-			<!--중량-->
-			<div class="ritems">
-				<div class="img_div"><br><img src="icon/weight.png" alt="weight"><br>
-					<div class="ritemsinfo">중량</div>
-				</div>
-				<div id="val1" class="ritemsvalue"><span id="rweightval">0000</span></div>
+			<h5 class="card-title">피카츄</h5>
+			<p class="card-text">처음 보는 것에게는 전격을 맞춘다. 새까맣게 탄 나무열매가 떨어져 있다는 것은 전격의 세기를 조절하지 못했다는 증거다.</p>
+		</div>
+		<ul class="list-group list-group-flush">
+			<li class="list-group-item">전기 자석파</li>
+			<li class="list-group-item">10만볼트</li>
+			<li class="list-group-item">전광석화</li>
+		</ul>
+		<div class="card-body">
+		<a href="#" class="card-link">Card link</a>
+		<a href="#" class="card-link">Another link</a>
+	</div>
+	</div>
+	<div class="card personalinfo">
+	<img src="https://w.namu.la/s/51f656cb58ffc529724fc1f62dc055430f035f937344cda61f6abcfa0e5001e2bc0cd13ae4a192b30962943a5526da6554ae6445388ced9d468e24369ed4b1f7fc3b45cd022a11d11dfb56bdda193d6b03ad1a09d386eaa0375edf6f9a6566f9e5e60563ddec46219e85888ece97762e" class="card-img-top" alt="...">
+	<div class="card-body">
+		<h5 class="card-title">피카츄</h5>
+		<p class="card-text">처음 보는 것에게는 전격을 맞춘다. 새까맣게 탄 나무열매가 떨어져 있다는 것은 전격의 세기를 조절하지 못했다는 증거다.</p>
+	</div>
+	<ul class="list-group list-group-flush">
+		<li class="list-group-item">전기 자석파</li>
+		<li class="list-group-item">10만볼트</li>
+		<li class="list-group-item">전광석화</li>
+	</ul>
+	<div class="card-body">
+		<a href="#" class="card-link">Card link</a>
+		<a href="#" class="card-link">Another link</a>
+	</div>
+	</div>
+	<div class="card personalinfo">
+	<img src="https://w.namu.la/s/51f656cb58ffc529724fc1f62dc055430f035f937344cda61f6abcfa0e5001e2bc0cd13ae4a192b30962943a5526da6554ae6445388ced9d468e24369ed4b1f7fc3b45cd022a11d11dfb56bdda193d6b03ad1a09d386eaa0375edf6f9a6566f9e5e60563ddec46219e85888ece97762e" class="card-img-top" alt="...">
+	<div class="card-body">
+		<h5 class="card-title">피카츄</h5>
+		<p class="card-text">처음 보는 것에게는 전격을 맞춘다. 새까맣게 탄 나무열매가 떨어져 있다는 것은 전격의 세기를 조절하지 못했다는 증거다.</p>
+	</div>
+	<ul class="list-group list-group-flush">
+		<li class="list-group-item">전기 자석파</li>
+		<li class="list-group-item">10만볼트</li>
+		<li class="list-group-item">전광석화</li>
+	</ul>
+	<div class="card-body">
+		<a href="#" class="card-link">Card link</a>
+		<a href="#" class="card-link">Another link</a>
+	</div>
+	</div>
+	<div class="card personalinfo">
+	<img src="https://w.namu.la/s/51f656cb58ffc529724fc1f62dc055430f035f937344cda61f6abcfa0e5001e2bc0cd13ae4a192b30962943a5526da6554ae6445388ced9d468e24369ed4b1f7fc3b45cd022a11d11dfb56bdda193d6b03ad1a09d386eaa0375edf6f9a6566f9e5e60563ddec46219e85888ece97762e" class="card-img-top" alt="...">
+	<div class="card-body">
+		<h5 class="card-title">피카츄</h5>
+		<p class="card-text">처음 보는 것에게는 전격을 맞춘다. 새까맣게 탄 나무열매가 떨어져 있다는 것은 전격의 세기를 조절하지 못했다는 증거다.</p>
+	</div>
+	<ul class="list-group list-group-flush">
+		<li class="list-group-item">전기 자석파</li>
+		<li class="list-group-item">10만볼트</li>
+		<li class="list-group-item">전광석화</li>
+	</ul>
+	<div class="card-body">
+		<a href="#" class="card-link">Card link</a>
+		<a href="#" class="card-link">Another link</a>
+	</div>
+	</div>
+	<!--메인화면 컵라면 정보카드-->
+	<div class="card mb-3" id="rinfocardvar" style="width: 300px; margin: 10px; height:100%;">
+	<img id="rimgval" src="https://w.namu.la/s/51f656cb58ffc529724fc1f62dc055430f035f937344cda61f6abcfa0e5001e2bc0cd13ae4a192b30962943a5526da6554ae6445388ced9d468e24369ed4b1f7fc3b45cd022a11d11dfb56bdda193d6b03ad1a09d386eaa0375edf6f9a6566f9e5e60563ddec46219e85888ece97762e" class="card-img-top" alt="...">
+	<div class="card-body">
+		<div id="rtitle"><span id="rtitleval">라면 이름</span></div><br><br>
+		<!--중량-->
+		<div class="ritems">
+			<div class="img_div"><br><img src="icon/weight.png" alt="weight"><br>
+				<div class="ritemsinfo">중량</div>
 			</div>
-			<!--칼로리-->
-			<div class="ritems">
-				<div class="img_div"><br><img src="icon/bab.png" alt="weight"><br>
-					<div class="ritemsinfo">칼로리</div>
-				</div>
-				<div id="val2" class="ritemsvalue"><span id="rcalval">0000</span></div>
+			<div id="val1" class="ritemsvalue"><span id="rweightval">0000</span></div>
+		</div>
+		<!--칼로리-->
+		<div class="ritems">
+			<div class="img_div"><br><img src="icon/bab.png" alt="weight"><br>
+				<div class="ritemsinfo">칼로리</div>
 			</div>
-			<!--유통기한-->
-			<div class="ritems">
-				<div class="img_div"><br><img src="icon/clock.png" alt="weight"><br>
-					<div class="ritemsinfo">유통기한</div>
-				</div>
-				<div id="val3" class="ritemsvalue"><span id="rendval">0개월</span></div>
+			<div id="val2" class="ritemsvalue"><span id="rcalval">0000</span></div>
+		</div>
+		<!--유통기한-->
+		<div class="ritems">
+			<div class="img_div"><br><img src="icon/clock.png" alt="weight"><br>
+				<div class="ritemsinfo">유통기한</div>
 			</div>
-			<!--출시년도-->
-			<div class="ritems">
-				<div class="img_div"><br><img src="icon/calender.png" alt="weight"><br>
-					<div class="ritemsinfo">출시년도</div>
-				</div>
-				<div id="val4" class="ritemsvalue"><span id="rbirthval">0000</span></div>
+			<div id="val3" class="ritemsvalue"><span id="rendval">0개월</span></div>
+		</div>
+		<!--출시년도-->
+		<div class="ritems">
+			<div class="img_div"><br><img src="icon/calender.png" alt="weight"><br>
+				<div class="ritemsinfo">출시년도</div>
 			</div>
+			<div id="val4" class="ritemsvalue"><span id="rbirthval">0000</span></div>
 		</div>
 	</div>
+	</div>
 	<!--메인화면 컵라면 통계-->
-	<div class="container" id="rgraphvar">
+	<div class="container-fluid" id="rgraphvar">
 		<div class="row">
 			<div class="col-md-12" id="rchart1var">
 				<canvas id="Chart1" width="1000"></canvas>
