Index Function Complete - MinSeok MainPage Fix

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <!--메인화면-->
 <!--사이드 바-->
 <div class="flex-shrink-0 p-3 bg-white" id="sidestyle">
-	<a href="#" class="d-flex align-items-center pb-3 mb-3 link-dark text-decoration-none border-bottom">
+	<a href="#" class="d-flex align-items-center pb-3 mb-3 link-dark text-decoration-none border-bottom" onclick="mainreturn()">
 		<img class="bi pe-none me-2" src="icon/mainicon.png" width="30" alt="dd">
 		<span class="fs-5 fw-semibold">농심관</span>
 	</a>
