그라데이션 추가

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <!--해더 부분-->
-<header class="navbar navbar-expand navbar-dark bg-dark bd-navbar">
+<header class="navbar navbar-expand navbar-dark bg-dark bd-navbar ooo" >
 	<a class="navbar-brand" href="#" style="margin-left: 50px;">라면라면</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
