--- a/index.html
+++ b/index.html
@@ -259,19 +259,18 @@
 	</div>
 	<!--자기소개-->
 	<div class="card personalinfo">
-		<img src="https://w.namu.la/s/51f656cb58ffc529724fc1f62dc055430f035f937344cda61f6abcfa0e5001e2bc0cd13ae4a192b30962943a5526da6554ae6445388ced9d468e24369ed4b1f7fc3b45cd022a11d11dfb56bdda193d6b03ad1a09d386eaa0375edf6f9a6566f9e5e60563ddec46219e85888ece97762e" class="card-img-top" alt="...">
+		<img src="ProfileImg/Minseok.jpg" class="card-img-top" alt="...">
 		<div class="card-body">
-			<h5 class="card-title">피카츄</h5>
-			<p class="card-text">처음 보는 것에게는 전격을 맞춘다. 새까맣게 탄 나무열매가 떨어져 있다는 것은 전격의 세기를 조절하지 못했다는 증거다.</p>
+			<h5 class="card-title">최민석</h5>
+			<p class="card-text">가천대학교 22학번 인공지능전공의 03년생 최민석 입니다.<br> 코딩은 즐겁습니다!</p>
 		</div>
 		<ul class="list-group list-group-flush">
-			<li class="list-group-item">전기 자석파</li>
-			<li class="list-group-item">10만볼트</li>
+			<li class="list-group-item">취미 : 게임, 음악듣기</li>
+			<li class="list-group-item">MBTI : INFJ</li>
 			<li class="list-group-item">전광석화</li>
 		</ul>
 		<div class="card-body">
-			<a href="#" class="card-link">Card link</a>
-			<a href="#" class="card-link">Another link</a>
+			<a href="https://lemon7z.tistory.com/" class="card-link">블로그</a>
 		</div>
 	</div>
 	<div class="card personalinfo">
@@ -292,7 +291,7 @@
 	</div>
 	<!--이정대-->
 	<div class="card personalinfo">
-		<img src="프로필 사진/me.jpg" class="card-img-top" alt="...">
+		<img src="ProfileImg/me.png" class="card-img-top" alt="...">
 		<div class="card-body">
 			<h5 class="card-title">이정대</h5>
 			<p class="card-text">가천대학교 1학년 20살 인공지능학부 이정대입니다!</p>
@@ -302,10 +301,6 @@
 			<li class="list-group-item">MBTI : ESFP</li>
 			<li class="list-group-item">콩BTI : ENTP</li>
 		</ul>
-		<div class="card-body">
-			<a href="#" class="card-link">Card link</a>
-			<a href="#" class="card-link">Another link</a>
-		</div>
 	</div>
 	<div class="card personalinfo">
 		<img src="https://w.namu.la/s/51f656cb58ffc529724fc1f62dc055430f035f937344cda61f6abcfa0e5001e2bc0cd13ae4a192b30962943a5526da6554ae6445388ced9d468e24369ed4b1f7fc3b45cd022a11d11dfb56bdda193d6b03ad1a09d386eaa0375edf6f9a6566f9e5e60563ddec46219e85888ece97762e" class="card-img-top" alt="...">
@@ -324,7 +319,6 @@
 		</div>
 	</div>
 </main>
-
 <script src="sidebars.js"></script>
 <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js" integrity="sha384-uO3SXW5IuS1ZpFPKugNNWqTZRRglnUJK6UAZ/gxOX80nxEkN9NcGZTftn6RzhGWE" crossorigin="anonymous"></script>
