Finished - MinSeok Self Description left

--- a/csv_import.html
+++ b/csv_import.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>test</title>
 	<script type="text/JavaScript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" ></script>
-	<script src="jquery-csv.js"></script>
+	<script src="JS/jquery-csv.js"></script>
 	<script>
 		var csvdata = "Cup_Name,Weight,Calorie,Exp_Date,Birth,href\n" +
             "우육탕큰사발,115,520,6,19890928,http://image.nongshim.com/non/pro/1597305362478.jpg\n" +
