Finished - MinSeok Self Description left

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 		</div>
 	</div>
 	<!--메인화면 컵라면 정보카드-->
-	<div class="card mb-3" id="rinfocardvar" style="max-width: 70%; margin: 10px; height:100%;">
+	<div class="card mb-3 rcard" id="rinfocardvar" >
 		<div class="row g-0">
 			<div class="col-md-4">
 				<img id="rimgval" src="https://w.namu.la/s/51f656cb58ffc529724fc1f62dc055430f035f937344cda61f6abcfa0e5001e2bc0cd13ae4a192b30962943a5526da6554ae6445388ced9d468e24369ed4b1f7fc3b45cd022a11d11dfb56bdda193d6b03ad1a09d386eaa0375edf6f9a6566f9e5e60563ddec46219e85888ece97762e" class="card-img-top" alt="...">
@@ -250,7 +250,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="card mb-3" id="rinfocardvar2" style="max-width: 70%; margin: 10px; height:100%;">
+	<div class="card mb-3 rcard" id="rinfocardvar2">
 		<div class="row g-0">
 			<div class="col-md-4">
 				<img id="rimgval2" src="https://w.namu.la/s/51f656cb58ffc529724fc1f62dc055430f035f937344cda61f6abcfa0e5001e2bc0cd13ae4a192b30962943a5526da6554ae6445388ced9d468e24369ed4b1f7fc3b45cd022a11d11dfb56bdda193d6b03ad1a09d386eaa0375edf6f9a6566f9e5e60563ddec46219e85888ece97762e" class="card-img-top" alt="...">
