--- a/index.html
+++ b/index.html
@@ -306,6 +306,19 @@
 		</div>
 	</div>
 	<!--자기소개-->
+	<!--이정대-->
+	<div class="card personalinfo">
+		<img src="ProfileImg/me.png" class="card-img-top" alt="...">
+		<div class="card-body">
+			<h5 class="card-title">이정대</h5>
+			<p class="card-text">가천대학교 1학년 20살 인공지능학부 이정대입니다!</p>
+		</div>
+		<ul class="list-group list-group-flush">
+			<li class="list-group-item">취미 : 게임하기, 맛있는 음식 먹기</li>
+			<li class="list-group-item">MBTI : ESFP</li>
+			<li class="list-group-item">콩BTI : ENTP</li>
+		</ul>
+	</div>
 	<!--최민석-->
 	<div class="card personalinfo">
 		<img src="ProfileImg/Minseok.jpg" class="card-img-top" alt="...">
@@ -321,39 +334,9 @@
 			<a href="https://lemon7z.tistory.com/" class="card-link">블로그</a>
 		</div>
 	</div>
-	
-	<div class="card personalinfo">
-		<img src="https://w.namu.la/s/51f656cb58ffc529724fc1f62dc055430f035f937344cda61f6abcfa0e5001e2bc0cd13ae4a192b30962943a5526da6554ae6445388ced9d468e24369ed4b1f7fc3b45cd022a11d11dfb56bdda193d6b03ad1a09d386eaa0375edf6f9a6566f9e5e60563ddec46219e85888ece97762e" class="card-img-top" alt="...">
-		<div class="card-body">
-			<h5 class="card-title">피카츄</h5>
-			<p class="card-text">처음 보는 것에게는 전격을 맞춘다. 새까맣게 탄 나무열매가 떨어져 있다는 것은 전격의 세기를 조절하지 못했다는 증거다.</p>
-		</div>
-		<ul class="list-group list-group-flush">
-			<li class="list-group-item">전기 자석파</li>
-			<li class="list-group-item">10만볼트</li>
-			<li class="list-group-item">전광석화</li>
-		</ul>
-		<div class="card-body">
-			<a href="#" class="card-link">Card link</a>
-			<a href="#" class="card-link">Another link</a>
-		</div>
-	</div>
-	<!--이정대-->
-	<div class="card personalinfo">
-		<img src="ProfileImg/me.png" class="card-img-top" alt="...">
-		<div class="card-body">
-			<h5 class="card-title">이정대</h5>
-			<p class="card-text">가천대학교 1학년 20살 인공지능학부 이정대입니다!</p>
-		</div>
-		<ul class="list-group list-group-flush">
-			<li class="list-group-item">취미 : 게임하기, 맛있는 음식 먹기</li>
-			<li class="list-group-item">MBTI : ESFP</li>
-			<li class="list-group-item">콩BTI : ENTP</li>
-		</ul>
-	</div>
 	<!--최유찬-->
 	<div class="card personalinfo">
-		<img src="https://w.namu.la/s/51f656cb58ffc529724fc1f62dc055430f035f937344cda61f6abcfa0e5001e2bc0cd13ae4a192b30962943a5526da6554ae6445388ced9d468e24369ed4b1f7fc3b45cd022a11d11dfb56bdda193d6b03ad1a09d386eaa0375edf6f9a6566f9e5e60563ddec46219e85888ece97762e" class="card-img-top" alt="...">
+		<img src="ProfileImg/Yuchan.jpeg" class="card-img-top" alt="...">
 		<div class="card-body">
 			<h5 class="card-title">최유찬</h5>
 			<p class="card-text">가천대학교 22학번 인공지능전공 03년생 최유찬입니다.<br>코딩이랑 모든게 처음이지만 열심히 하고 있습니다 </p>
@@ -362,6 +345,18 @@
 			<li class="list-group-item">취미 : 게임, 드라마보기, 볼링</li>
 			<li class="list-group-item">MBTI : ISTP</li>
 			<li class="list-group-item">좋아하는 라면 : 너구리컵</li>
+		</ul>
+	</div>
+	<!--최지안-->
+	<div class="card personalinfo">
+		<img src="ProfileImg/Jiahn.jpeg" class="card-img-top" alt="...">
+		<div class="card-body">
+			<h5 class="card-title">최지안</h5>
+			<p class="card-text">동양어문학과에서 소프트웨어학과로 전과했습니다.<br>2023년 2월 졸업 예정.</p>
+		</div>
+		<ul class="list-group list-group-flush">
+			<li class="list-group-item">학번 : 201833000</li>
+			<li class="list-group-item">csj04101219@naver.com</li>
 		</ul>
 	</div>
 </main>
