--- a/index.html
+++ b/index.html
@@ -352,11 +352,12 @@
 		<img src="ProfileImg/Jiahn.jpeg" class="card-img-top" alt="...">
 		<div class="card-body">
 			<h5 class="card-title">최지안</h5>
-			<p class="card-text">동양어문학과에서 소프트웨어학과로 전과했습니다.<br>2023년 2월 졸업 예정.</p>
+			<p class="card-text">동양어문학과에서 소프트웨어학과로 전과했습니다.<br>학번 : 201833000<br>메일: csj04101219@naver.com</p>
 		</div>
 		<ul class="list-group list-group-flush">
-			<li class="list-group-item">학번 : 201833000</li>
-			<li class="list-group-item">csj04101219@naver.com</li>
+			<li class="list-group-item">취미: 솜인형 제작, 그림, 게임</li>
+			<li class="list-group-item">mbti: INFP</li>
+			<li class="list-group-item">깃허브: https://github.com/JiahnChoi</li>
 		</ul>
 	</div>
 </main>
