--- a/index.html
+++ b/index.html
@@ -332,6 +332,7 @@
 		</ul>
 		<div class="card-body">
 			<a href="https://lemon7z.tistory.com/" class="card-link">블로그</a>
+			<a href="https://github.com/Dark-Lemon7z" class="card-link">깃허브</a>
 		</div>
 	</div>
 	<!--최유찬-->
